force-app/main/default/objects/Product2/fields/BusinessSegment__c.field-meta.xml
<CustomField>
    <fullName>BusinessSegment__c</fullName>
    <label>Business Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FAM-Filtration &amp; Advanced Materials</fullName>
            </value>
            <value>
                <fullName>SAS-Sustainable &amp; Adhesive Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>