force-app/main/default/objects/Product2/fields/ExternalProductName__c.field-meta.xml
<CustomField>
    <fullName>ExternalProductName__c</fullName>
    <externalId>true</externalId>
    <label>External Product Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>