force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>System__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Brand__c</columns>
    <columns>Product_Line_Description__c</columns>
    <columns>PRODUCT2.QTY_UNIT_OF_MEASURE</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>ExternalProductName__c</columns>
    <columns>BusinessSegment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>System__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Products</label>
</ListView>